--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.1",
+    "@types/react-redux": "^7.1.11",
     "@typescript-eslint/eslint-plugin": "4.8.2",
     "@typescript-eslint/parser": "4.8.2",
     "babel-eslint": "10.1.0",
