--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "ts-node": "^9.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "ts-node ./src/helpers/apiClient.ts" 
   },
   "eslintConfig": {
     "extends": [
