--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.15",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.19.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
-    "node-sass": "^5.0.0",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -32,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "api": "ts-node ./src/helpers/apiClient.ts" 
+    "api": "ts-node ./src/helpers/apiClient.ts"
   },
   "eslintConfig": {
     "extends": [
