--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "commitizen": "^4.2.2",
-    "gsap": "^3.5.1",
-    "node-sass": "^4.14.1",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
+    "gsap": "^3.5.1",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -60,6 +60,8 @@
     "@types/node-sass": "^4.11.1",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "4.8.2",
     "@typescript-eslint/parser": "4.8.2",
     "babel-eslint": "10.1.0",
