--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@types/node": "^12.19.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-transition-group": "^4.4.0",
     "commitizen": "^4.2.2",
-    "gsap": "^3.5.1",
-    "node-sass": "^4.14.1",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
+    "gsap": "^3.5.1",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "ts-node": "^9.0.0",
