--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^2.9.4",
     "gsap": "^3.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
