--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "oauth": "^0.9.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
