--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.1",
+    "@types/react-loader-spinner": "^3.1.2",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux": "^3.6.0",
