--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/d3": "^6.2.0",
     "@types/jest": "^26.0.15",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.19.7",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-transition-group": "^4.4.0",
     "commitizen": "^4.2.2",
+    "d3": "^6.3.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
     "gsap": "^3.5.1",
