--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/d3": "^6.2.0",
+    "@types/d3-selection": "^2.0.0",
     "@types/jest": "^26.0.15",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.19.7",
